--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,117 +1,13 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-executors:
-  default-executor:
-    docker:
-      - image: cypress/base:10
-
-jobs:
-  install-dependencies:
-    executor: default-executor
-    steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - v2-deps-{{ checksum "package-lock.json" }}
-            - v2-deps
-
-      - run:
-          name: 'Install dependencies'
-          command: npm ci
-
-      - save_cache:
-          paths:
-            - ~/.npm
-            - ~/.cache
-          key: v2-deps-{{ checksum "package-lock.json" }}
-
-      - persist_to_workspace:
-          root: .
-          paths: .
-
-  check-prettier:
-    executor: default-executor
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: 'Run prettier check on project files'
-          command: npm run prettier:check
-
-  check-linter:
-    executor: default-executor
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: 'Run linter'
-          command: npm run lint
-
-  run-e2e-tests:
-    executor: default-executor
-    steps:
-      - attach_workspace:
-          at: .
-      - restore_cache:
-          keys:
-            - v2-deps-{{ checksum "package-lock.json" }}
-            - v2-deps
-      - run:
-          name: 'Run e2e tests'
-          command: npm run test:e2e:headless
-
-  build:
-    executor: default-executor
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: 'Build'
-          command: npm run build
-      - persist_to_workspace:
-          root: .
-          paths: .
-
-  check-bundles-sizes:
-    executor: default-executor
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: 'Check bundles sizes'
-          command: npm run bundlesize
-
-  deploy:
-    executor: default-executor
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: 'Firebase deploy'
-          command: |
-            if [[ "$CIRCLE_BRANCH" == "master" ]]; then
-              npm run firebase:deploy:ci
-            fi
-
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
 workflows:
-  version: 2
-  build-and-deploy:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - install-dependencies
-      - check-linter:
-          requires:
-            - install-dependencies
-      - run-e2e-tests:
-          requires:
-            - install-dependencies
-      - build:
-          requires:
-            - check-linter
-            - run-e2e-tests
-      - check-bundles-sizes:
-          requires:
-            - build
-      - deploy:
-          requires:
-            - check-bundles-sizes
+      - welcome/run
