--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.1.3",
     "firebase": "^6.0.4",
     "is_js": "^0.9.0",
+    "locomotive-scroll": "^3.4.4",
     "lodash": "^4.17.15",
     "pwacompat": "^2.0.9",
     "register-service-worker": "^1.6.2",
