--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@sendgrid/mail": "^6.5.0",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0",
-    "json2csv": "^4.5.4"
+    "json2csv": "^4.5.4",
+    "postmark": "^2.5.3"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
